# Xeno

./: .gitignore  CMakeLists.txt  README.md  auto-rename-pad.txt  cmdUtil.bat
ext/: rtw_stb_image.h
scenes/: firstTry.json  objTry.json
scenes/caustics-bunny/: caustics-bunny-only.json  caustics-bunny.json  cbox-dielectric-conductor.json  cbox-dielectric.json  cbox-texture.json
scenes/cbox/: 1quadLight.json  1triangleLight-substitute.json  2quadLight.json  2triangleLight-substitute.json  2triangleLight.json  cbox-depth-stratified.json  cbox-dielectric.json  cbox-largeIterations.json  cbox-mirror.json  cbox-mis.json  cbox-pm.json  cbox.json  luminaire.json
scenes/sphere-caustics/: sphere-caustics.json
scenes/teapot/: teapot.json
scenes/veach-bidir/: veach-bidir-allDiffuse.json  veach-bidir.json
scenes/veach-bidir/plymeshes/: Mesh004.mtl
scenes/veach-mis/: veach-mis-allDiffuse.json  veach-mis-quad.json  veach-mis.json
src/: bsdf.h  bxdf.h  camera.cpp  camera.h  fileutil.h  film.cpp  film.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  material.h  mathutil.h  parallel.cpp  parallel.h  primitive.h  ray.h  renderParams.cpp  renderParams.h  rng.cpp  rng.h  scattering.h  scene.h  sensor.cpp  sensor.h  shape.cpp  shape.h  texture.h  transform.cpp  transform.h  vecmath.h  vector.h  xeno.cpp  xeno.h
src/accelerators/: bvh.cpp  bvh.h  kdtree.cpp  kdtree.h  objectList.cpp  objectList.h
src/integrators/: bdpt.cpp  bdpt.h  misPathTracer.cpp  misPathTracer.h  neePathTracer.cpp  neePathTracer.h  normal.cpp  normal.h  pathTracer.cpp  pathTracer.h  pm.cpp  pm.h  simplePathTracer.cpp  simplePathTracer.h  sppm.cpp  sppm.h
src/io/: cmdOptions.h  fileutil.cpp  fileutil.h  jsonutil.cpp  jsonutil.h  renderParams.cpp  renderParams.h
src/materials/: conductor.cpp  conductor.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  mirror.h
src/sensors/: pinhole.cpp  pinhole.h
src/shapes/: quad.cpp  quad.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  triangleMesh.h
src/textures/: constantTexture.h  imageTexture.h
